--- a/index.html
+++ b/index.html
@@ -1130,17 +1130,15 @@
             display: inline-flex;
             align-items: center;
             gap: 5px;
-            padding: 10px 15px;
-            background: rgba(0, 150, 255, 0.15);
-            border-radius: 15px;
         }
 
         .typing-indicator span {
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
             background: rgba(255, 255, 255, 0.7);
             border-radius: 50%;
             animation: typingBounce 1.4s infinite ease-in-out;
+            display: inline-block;
         }
 
         .typing-indicator span:nth-child(1) { animation-delay: 0s; }
