--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ocean Odyssey</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Righteous&family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
