--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
                 <div class="bottom-nav">
                     <a href="" target="_blank"><button class="nav-button pump-fun"><img src="images/Pump_fun_logo.png" alt="Pump.fun"></button></a>
                     <button class="nav-button docs" onclick="toggleDocs()"><img src="images/docs.png" alt="Guide"></button>
-                    <button class="nav-button twitter" onclick="window.open('https://x.com/deepseareefy', '_blank')"><img src="images/xlogo.png" alt="X Logo"></button>
+                    <button class="nav-button twitter" onclick="window.open('https://x.com/ReefyTheShark', '_blank')"><img src="images/xlogo.png" alt="X Logo"></button>
                 </div>
             </div>
         </div>
