--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
                 <button class="chapter-button locked" id="chapter4"><span class="chapter-text">Chapter 4: Reefy Among the Icebergs</span></button>
                 <button class="chapter-button locked" id="chapter5"><span class="chapter-text">Chapter 5: The Frozen North</span></button>
                 <div class="bottom-nav">
-                    <a href="#" target="_blank"><button class="nav-button pump-fun"><img src="images/Pump_fun_logo.png" alt="Pump.fun"></button></a>
+                    <a href="https://pump.fun/coin/GMAwdEiNZ9NPdf3StMgaGmeRfxo7wWqcwMaLsHfupump" target="_blank"><button class="nav-button pump-fun"><img src="images/Pump_fun_logo.png" alt="Pump.fun"></button></a>
                     <button class="nav-button docs" onclick="toggleDocs()"><img src="images/docs.png" alt="Guide"></button>
                     <button class="nav-button twitter" onclick="window.open('https://x.com/ReefyTheShark', '_blank')"><img src="images/xlogo.png" alt="X Logo"></button>
                 </div>
